# lgeneral-sdl2

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README.lgeneral  config.h.in  configure  configure.ac
cmake/: config.h.in
intl/: hash-string.h
lgc-pg/: CMakeLists.txt  Makefile.in  lgcpg_globals.c  list.h  main.c  misc.c  misc.h  nations.c  scenarios.c  shp.c  shp.h  shptool.c  terrain.c  units.c
lgc-pg/convdata/: Makefile.in
lged/: CMakeLists.txt  Makefile.am  Makefile.in  lged.c
lgeditor/: CMakeLists.txt  configure
lgeditor/src/: data.cpp  gui.cpp  lgeditor_config.h.in  main.cpp  mapview.cpp  parser.cpp  widgets.cpp
lgeneral-redit/: CMakeLists.txt
lgeneral-redit/src/: compat.c  compat.h  misc.c
po/: CMakeLists.txt  Makefile.in
po/lgeneral/: CMakeLists.txt  de.gmo  de.po  en.gmo  en.po
po/pg/: CMakeLists.txt  de.gmo  de.po  en.gmo  en.po
src/: CMakeLists.txt  Makefile.in  audio.c  audio.h  campaign.c  config.c  config.h  engine.c  event.c  event.h  gui.c  gui.h  image.c  lg-sdl.c  lg-sdl.h  list.h  main.c  map.c  misc.c  misc.h  nation.c  purchase_dlg.c  purchase_dlg.h  scenario.c  slot.c  strat_map.c  terrain.c  unit.c  unit_lib.c  windows.c  windows.h
src/ai_modules/: Makefile.in
src/campaigns/: Makefile.in
src/gfx/: Makefile.in
src/gfx/flags/: Makefile.in
src/gfx/terrain/: Makefile.in
src/gfx/units/: Makefile.in
src/maps/: Makefile.in
src/music/: Makefile.in
src/nations/: Makefile.in
src/scenarios/: Makefile.in
src/sounds/: Makefile.in
src/terrain/: Makefile.in
src/themes/: Makefile.in
src/themes/default/: Makefile.in
src/units/: Makefile.in
tools/: Makefile.in
tools/ltrextract/: Makefile.in
util/: Makefile.in  hashtable_itr.h  localize.c  localize.h  paths-linux.c  paths.c  portability.c
